src/test/deca/syntax/valid/synt/test.deca
{
if (1) {
    print("ok");
    }
    }
