src/test/deca/syntax/invalid/synt/include.deca
#include "toInclude.deca"
{
    println("hello im include");
}
